Changes for 1.9

 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

Changes for 1.8.2

 - [ZBX-1999] fixed bug when cannot create simple check item with macro in parameters (Vedmak)
 - [ZBX-1269] fixed offscreen popups (Vedmak)
 - [ZBX-1679] fixed error sometimes happen when use print button (Vedmak)
 - [ZBX-1980] added requirements check for php upload_max_filesize (Vedmak)
 - [ZBX-2002] refresh timer is now restarted instead of stopped when checkbox is checked(Vedmak)
 - [ZBX-1961] added support of '%' prompt for telnet.run[] check (Sasha)
 - [ZBX-1939] fixed errors when unicode chars are used in item keys (Vedmak)
 - [ZBX-1996] fixed JS error in IE7 in maps (Aly)
 - [ZBX-1328] improved host group mass deletion caption (Richlv)
 - [DEV-450] added support of LogSlowQueries option (Sasha)
 - [ZBX-1974] removed "Dropdown first entry" "1.6.2 comp mode" option (Vedmak)
 - [ZBX-1826] fixed error when change node in monitoring web (Vedmak)
 - [ZBX-1943] fixed refresh time selection in dashboard widgets (Vedmak)
 - [ZBX-1929] include eventlog.c and eventlog.h files in distribution package (Richlv)
 - [ZBX-1897] include CREDITS file in distribution package (Richlv)
 - [ZBXNEXT-229] further updates for Brazilian Portuguese translation; thanks to murilex (Richlv)
 - [ZBX-1945] speed improvement for synchronization between nodes (Sasha)
 - [ZBX-1940] fixed map creation if zabbix doesn't contain images (Aly)
 - [ZBX-1938] fixed permission check inefficiency in charts (Aly)
 - [ZBX-1957] fixed compilation errors under OpenBSD (Sasha)
 - [ZBX-1869] fixed graph max Y most top value calculation (Aly)
 - [ZBX-1948] fixed node disappearing after node deleted and then created with same ID (Vedmak)
 - [ZBXNEXT-225] update Brazilian Portuguese translation; thanks to murilex (Richlv)
 - [DEV-137] add basic bootstrap script (Richlv)
 - [ZBX-1944] fixed no permission error when try to view simple graph from childnodes (Vedmak)