@@ -4,6 +4,7 @@ Changes for 1.9
 
 Changes for 1.8.2
 
+ - [ZBX-1853] fixed template\host full clone with triggers with dependencies (Vedmak)
  - [ZBX-1999] fixed bug when cannot create simple check item with macro in parameters (Vedmak)
  - [ZBX-1269] fixed offscreen popups (Vedmak)
  - [ZBX-1679] fixed error sometimes happen when use print button (Vedmak)
